--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,4 +1,11 @@
 .web-main-header{
-  background-color: grey;
+  background-color:  rgb(255, 204, 204);
   max-width: 1230px;
+  height: 10vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+  
 }
