--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,11 +1,47 @@
 .web-main-header{
-  background-color:  rgb(255, 204, 204);
-  max-width: 1230px;
-  height: 10vh;
+display: flex;
+justify-content: space-between;
+align-items: center;
+
+  background-color: rgb(255, 204, 204);
+  max-width: 98vw;
+  height: 20vh;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
   padding-bottom: 5px;
+  border-radius: 20px;
 
   
+
+.main-header-logo{
+  display:flex;
+  padding-left: 10px;
+  height:100%;
+
+}
+
+.main-header-logo-img{
+  border-radius: 50px;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+
+.app-header-main-nav{
+  display:flex;
+  gap:20px;
+  padding-right: 30px;
+  
+
+
+  .app-header-main-link{
+    font-size:40px;
+    font-weight: 400;
+    text-decoration: none;
+    color:rgb(051, 102, 102);
+  }
+}
+
 }
