--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,5 +1,18 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+body {
+  font-family: 'Heebo', sans-serif;
+}
+
+
 .app-main-layout{
   height: 100vh;
   width:100vw;
-  background-color:rgb(051, 102, 102);
+  background-color:rgb(253, 227, 217);
 }
