--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -3,20 +3,21 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 
-  background-color: rgb(255, 204, 204);
-  max-width: 98vw;
+  background-color: white;
+  max-width: 100vw;
   height: 20vh;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-radius: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
 
   
 
 .main-header-logo{
   display:flex;
-  padding-left: 10px;
+  padding-left: 40px;
   height:100%;
 
 }
@@ -31,16 +32,17 @@ align-items: center;
 
 .app-header-main-nav{
   display:flex;
-  gap:20px;
-  padding-right: 30px;
+  gap:40px;
+  padding-right: 40px;
   
 
 
   .app-header-main-link{
-    font-size:40px;
+    font-size:35px;
     font-weight: 400;
     text-decoration: none;
     color:rgb(051, 102, 102);
+    font-family: "Rubik", sans-serif;
   }
 }
 
