--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,18 +1,18 @@
 html, body {
-  margin: 0;
+  margin: 0 ;
   padding: 0;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
+  height: fit-content;
+  // width: 100%;
+  // overflow: hidden;
 }
 
 body {
-  font-family: 'Heebo', sans-serif;
+  font-family: var(--Rubik);
 }
 
 
 .app-main-layout{
-  height: 100vh;
+  height: fit-content;
   width:100vw;
   background-color:rgb(253, 227, 217);
 }
