--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -3,27 +3,29 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 
-  background-color: white;
-  max-width: 100vw;
-  height: 20vh;
+  background-color: rgb(255, 255, 255);
+  width: 100vw;
+  height: 18vh;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+  border-bottom-left-radius: 0.625rem;
+  border-bottom-right-radius: 0.625rem;
+  // position: fixed;
+  
+  
 
   
 
 .main-header-logo{
   display:flex;
-  padding-left: 40px;
+  padding-left: 2.5rem;
   height:100%;
 
 }
 
 .main-header-logo-img{
-  border-radius: 50px;
   width: 100%;
   height: auto;
   object-fit: contain;
@@ -32,17 +34,17 @@ align-items: center;
 
 .app-header-main-nav{
   display:flex;
-  gap:40px;
-  padding-right: 40px;
+  gap:2.5rem;
+  padding-right: 2.5rem;
   
 
 
   .app-header-main-link{
-    font-size:35px;
+    font-size:1.375rem;
     font-weight: 400;
     text-decoration: none;
-    color:rgb(051, 102, 102);
-    font-family: "Rubik", sans-serif;
+    color:var(--primary-green);
+    font-family: var(--rubik);
   }
 }
 
