--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,10 +1,9 @@
-// basics
+/* basics */
 @import './basics.scss';
 
-// pages
+/* pages */
 @import './app.scss';
 
-// cmps
+/* cmps */
 @import './cmps/AppHeader.scss';
 @import './cmps/Hero.scss';
-
