--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -46,6 +46,12 @@ align-items: center;
     color:var(--primary-green);
     font-family: var(--rubik);
   }
+
+  .app-header-main-link:hover{
+    transform: scale(1.1);
+    transition: 0.5s;
+
+  }
 }
 
 }
