centering logo in the header and small css changes

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,9 +1,14 @@
-/* basics */
+
+
+
+// basics
 @import './basics.scss';
 
-/* pages */
+// pages
 @import './app.scss';
 
-/* cmps */
+// cmps
+
 @import './cmps/AppHeader.scss';
 @import './cmps/Hero.scss';
+
