--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -2,6 +2,9 @@
 display: flex;
 justify-content: space-between;
 align-items: center;
+justify-content: space-evenly;
+// gap:2.5rem;
+// width: 100vw;
 
   background-color: rgb(255, 255, 255);
   width: 100vw;
@@ -20,7 +23,7 @@ align-items: center;
 
 .main-header-logo{
   display:flex;
-  padding-left: 2.5rem;
+  // padding-left: 2.5rem;
   height:100%;
 
 }
@@ -35,7 +38,7 @@ align-items: center;
 .app-header-main-nav{
   display:flex;
   gap:2.5rem;
-  padding-right: 2.5rem;
+  // padding-right: 2.5rem;
   
 
 
