--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,18 +1,26 @@
 html, body {
-  margin: 0 ;
+  margin: 0;
   padding: 0;
   height: fit-content;
-  // width: 100%;
-  // overflow: hidden;
+  scroll-behavior: smooth;
+
+
+  // animation:appear linear;
+  // // animation-timeline:view();
+  // animation-range:entry 0% cover 100%;
+  // animation-duration: 0.8s;
+
 }
 
 body {
   font-family: var(--rubik);
 }
 
-
-.app-main-layout{
+.app-main-layout {
   height: fit-content;
-  width:100vw;
-  background-color:rgb(253, 227, 217);
+  width: 100vw;
+  background-color: rgb(253, 227, 217);
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
