--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,4 +1,4 @@
-.web-main-header{
+#web-main-header{
 display: flex;
 justify-content: space-between;
 align-items: center;
@@ -17,7 +17,10 @@ justify-content: space-evenly;
   border-bottom-right-radius: 0.625rem;
   // position: fixed;
   
-  
+  animation:appear linear;
+  // animation-timeline:view();
+  animation-range:entry 0% cover 100%;
+  animation-duration: 0.6s;
 
   
 
@@ -44,7 +47,7 @@ justify-content: space-evenly;
 
   .app-header-main-link{
     font-size:1.375rem;
-    font-weight: 400;
+    font-weight: 600;
     text-decoration: none;
     color:var(--primary-green);
     font-family: var(--rubik);
