--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,15 @@
 
+@keyframes appear{
+  from{
+    opacity: 0;
+    scale:0.5;
+  }
+  to{
+    opacity:1;
+    scale:1;
 
+  }
+  }
 
 // basics
 @import './basics.scss';
@@ -11,4 +21,5 @@
 
 @import './cmps/AppHeader.scss';
 @import './cmps/Hero.scss';
+@import './cmps/Issue.scss';
 
