--- a/src/assets/styles/basics.scss
+++ b/src/assets/styles/basics.scss
@@ -9,6 +9,9 @@
   
   // Heebo:
   // font-family: "Heebo", sans-serif;
+
+  // Valera Round:
+  --Valera:"Varela Round", sans-serif;
   
   // colors:
   
