--- a/src/assets/styles/cmps/Issue.scss
+++ b/src/assets/styles/cmps/Issue.scss
@@ -12,29 +12,117 @@
 
   animation:appear linear;
   animation-timeline:view();
-  animation-range:entry 0% cover 45%;
+  animation-range:entry 0% cover 40%;
 
 
  
+.issue-section-textbox{
+  display:flex;
+  flex-direction:column;
+
+  position: absolute;
+      direction: rtl;
 
 
+      width:500px;
+    height:300px;
+    padding:3rem;
+    padding-right: 4.5rem;
+    padding-top: 1rem;
+
+
+
+    left:44%;
+    top:23%;
+
+
+    color:white;
+    background: rgba(51, 102, 102, 0.897);
+
+        border-radius: 100px;
+}
+
+
+.issue-section-text{
+      color:white;
+
+          font-size:1.6rem ;
+    text-align: right;
+}
+
+.issue-section-textbox-header{
+  color:var(--primary-pink);
+
+  font-size:1.8rem ;
+text-align: right;
+}
   
 
 
-  &::after{
-    content:'';
-    position:absolute;
+.issue-section-textbox-2{
+  display:flex;
+  flex-direction:column;
+
+  position: absolute;
+      direction: rtl;
+
+
+      width:400px;
+    height:170px;
+    padding:3rem;
+    padding-top: 0.5rem;
+    padding-bottom: 4rem;
+
+
+
+    left:49%;
+    top:68%;
+
+
+    color:white;
     background: rgba(51, 102, 102, 0.897);
 
+        border-radius: 100px;
+}
 
-    width:750px;
-    height:300px;
 
-    left:42%;
-    top:38%;
+.issue-section-text-2{
+  color:var(--primary-pink);
 
-    border-radius: 100px;
-  }
+  font-size:1.6rem;
+text-align: center;
+}
+
+  // &::after{
+  //   content:'זוכרים את עצמכם דקה לפני שהפכתם להורים בפעם הראשונה? זוכרים איך היה לכם ברור איזה הורים אתם רוצים להיות? גם אתם מרגישים שהרבה פעמים אתם לא שם? קורה בדיוק ההפך?' ;
+  //   position:absolute;
+  //   direction: rtl;
+
+
+    
+ 
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items:center;
+
+
+  //   color:white;
+  //   background: rgba(51, 102, 102, 0.897);
+
+  //   font-size:1.5rem ;
+  //   text-align: right;
+
+  //   width:500px;
+  //   height:200px;
+  //   padding:4rem;
+
+  //   left:44%;
+  //   top:28%;
+
+  //   border-radius: 100px;
+  // }
+
+
 
 
   .issue-section-header{
@@ -56,7 +144,7 @@
 
 
     width:50vw;
-    height:43.8rem;
+    max-height:49rem;
 
 
     
@@ -67,5 +155,7 @@
     width:100%;
     height:100%;
     border-radius: 100px;
+    object-fit: contain;
+    padding-bottom: 2rem;
   }
 }
