fix little bug with main.css typos

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -11,13 +11,13 @@
   }
 }
 
-// basics
+/* basics */
 @import './basics.scss';
 
-// pages
+/* pages */
 @import './app.scss';
 
-// cmps
+/* cmps */
 
 @import './cmps/AppHeader.scss';
 @import './cmps/Hero.scss';
