change animation for start

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -17,10 +17,10 @@ justify-content: space-evenly;
   border-bottom-right-radius: 0.625rem;
   // position: fixed;
   
-  animation:appear linear;
-  // animation-timeline:view();
-  animation-range:entry 0% cover 100%;
-  animation-duration: 0.6s;
+  // animation:appear linear;
+  // // animation-timeline:view();
+  // animation-range:entry 0% cover 100%;
+  // animation-duration: 0.6s;
 
   
 
