--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -6,6 +6,11 @@ html, body {
 
   font-family: var(--Valera);
 
+  animation:appear linear;
+  // animation-timeline:view();
+  animation-range:entry 0% cover 100%;
+  animation-duration: 0.6s;
+
 
   // animation:appear linear;
   // // animation-timeline:view();
