revert animation on start

--- a/src/assets/styles/cmps/Hero.scss
+++ b/src/assets/styles/cmps/Hero.scss
@@ -6,10 +6,10 @@
   // width: 100vw;
   // height: 100vh;
 
-  // animation:appear linear;
-  // // animation-timeline:view();
-  // animation-range:entry 0% cover 100%;
-  // animation-duration: 0.8s;
+  animation:appear linear;
+  // animation-timeline:view();
+  animation-range:entry 0% cover 100%;
+  animation-duration: 0.8s;
   
   
   
