create and add IssueStart cmp

--- a/src/assets/styles/cmps/Hero.scss
+++ b/src/assets/styles/cmps/Hero.scss
@@ -10,6 +10,8 @@
   // animation-timeline:view();
   animation-range:entry 0% cover 100%;
   animation-duration: 0.8s;
+
+  margin-bottom: 3rem;
   
   
   
