finalize addition of IssueStart design and change of font across the app

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -6,7 +6,7 @@ html, body {
 
   // direction: rtl;
 
-  font-family: var(--Valera);
+  font-family: var(--Fredoka);
 
 
 
@@ -18,7 +18,7 @@ html, body {
 }
 
 body {
-  font-family: var(--Valera);
+  font-family: var(--Fredoka);
 }
 
 .app-main-layout {
