--- a/src/assets/styles/basics.scss
+++ b/src/assets/styles/basics.scss
@@ -12,6 +12,12 @@
 
   // Valera Round:
   --Valera:"Varela Round", sans-serif;
+
+  // Arimo:
+  --Arimo:"Arimo", sans-serif;
+
+  // Fredoka
+  --Fredoka:"Fredoka", sans-serif;
   
   // colors:
   
