--- a/src/assets/styles/cmps/Issue.scss
+++ b/src/assets/styles/cmps/Issue.scss
@@ -25,10 +25,12 @@
       direction: rtl;
 
 
+
+    margin:0;  
     width:31.25rem;
     height:23rem;
     padding:2.4rem;
-    padding-right: 4.5rem;
+    padding-right: 3.5rem;
     padding-top: 1rem;
     padding-bottom: 3.5rem;
 
@@ -39,6 +41,7 @@
 
 
     color:white;
+    font-weight: 400;
     background: rgba(51, 102, 102, 0.897);
 
         border-radius: 6.25rem;
@@ -58,6 +61,7 @@
   font-size:1.7rem;
 text-align: right;
 margin-bottom:-0.2rem;
+font-weight: 500;
 }
   
 
@@ -78,11 +82,12 @@ margin-bottom:-0.2rem;
 
 
 
-    left:49.5%;
+    left:49%;
     top:66%;
 
 
     color:white;
+    
     background: rgba(51, 102, 102, 0.897);
 
         border-radius: 3.5rem;
@@ -92,7 +97,8 @@ margin-bottom:-0.2rem;
 .issue-section-text-2{
   color:var(--primary-pink);
 
-  font-size:1.8rem;
+  font-size:1.7rem;
+  font-weight: 500;
 text-align: center;
 }
 
