--- a/src/assets/styles/cmps/IssueStart.scss
+++ b/src/assets/styles/cmps/IssueStart.scss
@@ -15,8 +15,11 @@
   .issue-section-intro-header{
     color: var(--secondary-brown);
     
-    font-size:1.8rem;
-    margin-top:-0.5rem;
+    font-size:2rem;
+    // margin-top:-0.5rem;
+    font-weight: 500;
+    margin-bottom: 4rem;
+    letter-spacing: 0.1rem;
   }
   
 
@@ -29,7 +32,8 @@
     justify-content: center;
     align-items: center;
 
-    margin-bottom: 5rem;
+
+    margin-bottom: 10rem;
     // margin-top:-0.4rem;
 
     color: var(--secondary-brown);
@@ -40,8 +44,9 @@
     list-style: none;
 
 .issue-section-list-item{
-     font-size:1.4rem;
+     font-size:1.6rem;
      max-width: 20rem;
+     font-weight: 300;
 
      
 }
@@ -56,8 +61,9 @@
     
     
     
-    font-size: 2.8rem;
+    font-size: 3rem;
     font-weight: 700;
+    letter-spacing: 0.1rem;
     color:var(--primary-green);
   }
 }
