--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -19,6 +19,7 @@ html, body {
 
 body {
   font-family: var(--Fredoka);
+  
 }
 
 .app-main-layout {
@@ -28,4 +29,19 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; 
+}
+
+.logo-nav{
+  position:fixed;
+
+  height:4rem;
+  width:8rem;
+  top:80%;
+  left:92%;
+
+
+  animation:appear linear;
+  // animation-timeline:view();
+  animation-range:entry 0% cover 100%;
+  animation-duration: 0.6s;
 }
