--- a/src/assets/styles/cmps/Hero.scss
+++ b/src/assets/styles/cmps/Hero.scss
@@ -38,12 +38,13 @@
     direction: rtl;
     
     color:rgba(255, 204, 204, 0.872);
+    // color: rgb(253, 227, 217);
     // color:rgba(255, 255, 255, 0.799);
     // color:var(--primary-pink);
     font-size: 2.8rem;
     text-align:  right;
     width:30%;
-    top:35%;
+    top:40%;
     left:6%;
     rotate:-5deg;
     // font-family: "Rubik", sans-serif;
