--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,6 +11,17 @@
   }
 }
 
+@keyframes disappear {
+  from{
+    opacity: 1;
+    transform: scale(1);
+  }
+  to{
+    opacity: 0;
+    transform: scale(0.5);
+  }
+}
+
 /* basics */
 @import './basics.scss';
 
