small css fixes

--- a/src/assets/styles/cmps/Issue.scss
+++ b/src/assets/styles/cmps/Issue.scss
@@ -6,7 +6,7 @@
   
 
 
-  width:90vw;
+  width:75vw;
   height:fit-content;
   margin-top: -3rem;
   // padding: 1rem;
@@ -36,8 +36,8 @@
 
 
 
-    left:45%;
-    top:4%;
+    left:55%;
+    top:18%;
 
 
     color:white;
@@ -82,8 +82,8 @@ font-weight: 500;
 
 
 
-    left:49%;
-    top:66%;
+    left:58.2%;
+    top:67%;
 
 
     color:white;
@@ -143,7 +143,7 @@ text-align: center;
     
 
     width:50vw;
-    max-height:49rem;
+    max-height:fit-content;
   }
 
 
