--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .app-main-layout {
-  height: fit-content;
+  min-height: fit-content;
   width: 100vw;
   background-color: rgb(253, 227, 217);
   display: flex;
