--- a/src/assets/styles/cmps/Hero.scss
+++ b/src/assets/styles/cmps/Hero.scss
@@ -41,7 +41,7 @@
     // color: rgb(253, 227, 217);
     // color:rgba(255, 255, 255, 0.799);
     // color:var(--primary-pink);
-    font-size: 2.8rem;
+    font-size: var(--pc-main-header);
     text-align:  right;
     width:30%;
     top:40%;
