--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,11 +12,12 @@
 }
 
 @keyframes disappear {
-  from{
+  from {
     opacity: 1;
     transform: scale(1);
   }
-  to{
+
+  to {
     opacity: 0;
     transform: scale(0.5);
   }
@@ -34,3 +35,7 @@
 @import './cmps/Hero.scss';
 @import './cmps/IssueStart.scss';
 @import './cmps/Issue.scss';
+
+
+/*mq*/
+@import './mq.scss';
