--- a/src/assets/styles/basics.scss
+++ b/src/assets/styles/basics.scss
@@ -58,4 +58,11 @@
         --ipad-air-sub-big-header:1.4rem;
         --ipad-air-regular-big-letter:1rem;
         --ipad-air-regular-letter:0.8rem;
+
+
+                //* MOBILE //
+                --mobile-main-header:0.9rem;
+                --mobile-sub-big-header:0.7rem;
+                --mobile-regular-big-letter:0.7rem;
+                --mobile-regular-letter:0.6rem;
 }
