--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -607,7 +607,7 @@
  //todo###################################### IPAD AIR ##########################################
 
 
-@media screen and (min-width:1000px)  and (max-width:1300px){
+@media screen and (min-width:820px)  and (max-width:1300px){
   .hero-section{
     display: flex;
     position: relative;
@@ -774,7 +774,7 @@
       gap:5rem;
   
             left:48%;
-            top: 12.5%;
+            top: 5.5%;
   
         
       
@@ -893,7 +893,7 @@
 
 
      //todo###################################### MOBILE ##########################################
-     @media screen and (min-width:300px)  and (max-width:1000px){
+     @media screen and (min-width:300px)  and (max-width:850px){
 
       #web-main-header{
         display: flex;
@@ -905,7 +905,7 @@
         
           background-color: rgb(255, 255, 255);
           width: 100vw;
-          height: 7vh;
+          height: 10vh;
           margin-left: auto;
           margin-right: auto;
           padding-top: 0.625rem;
@@ -967,8 +967,8 @@
          position: relative;
          
          // background-image: url('../src/assets/styles/imgs/images/Hero-img-3.jpg');
-         // width: 100vw;
-         // height: 100vh;
+         width: auto;
+         height: 100vh;
          
          animation:appear linear;
          // animation-timeline:view();
@@ -1001,15 +1001,15 @@
             
             direction: rtl;
             
-            color:rgba(255, 204, 204, 0.872);
+            color:white;
             // color: rgb(253, 227, 217);
             // color:rgba(255, 255, 255, 0.799);
             // color:var(--primary-pink);
             font-size: var(--mobile-main-header);
             text-align:  right;
-            width:30%;
-            top:40%;
-            left:1.5%;
+            width:45%;
+            top:65%;
+            left:1.2%;
             rotate:-5.5deg;
             // font-family: "Rubik", sans-serif;
             font-family: var(--Fredoka);
@@ -1132,7 +1132,7 @@
             gap:0.1rem;
             
             left: 10%;
-            top: 45%;
+            top: 50%;
             
             
             
@@ -1235,17 +1235,17 @@
           display: flex;
           
           
-          max-width:90vw;
-          max-height:fit-content;
+          max-width:100vw;
+          max-height:100vh;
         }
         
         
         .issue-img{
           max-width:100%;
           max-height:100%;
-          border-radius: 6.25rem;
+          border-radius: 4rem;
           object-fit: contain;
-          padding-bottom: 2rem;
+          // padding-bottom: 2rem;
         }
 
 
@@ -1255,8 +1255,8 @@
           // visibility: hidden;
           // display: none;
         
-          height:1.8rem;
-          width:3.8rem;
+          height:2.2rem;
+          width:4.4rem;
           top:80%;
           left:86%;
         
