more small fixes for mobile mq

--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -1008,7 +1008,7 @@
             font-size: var(--mobile-main-header);
             text-align:  right;
             width:45%;
-            top:65%;
+            top:62%;
             left:1.2%;
             rotate:-5.5deg;
             // font-family: "Rubik", sans-serif;
@@ -1108,7 +1108,7 @@
           
           
           width:100vw;
-          height:100vh;
+          height:fit-content;
           margin-top: -5rem;
           // padding: 1rem;
           
@@ -1132,7 +1132,7 @@
             gap:0.1rem;
             
             left: 10%;
-            top: 50%;
+            top: 60%;
             
             
             
