--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -655,7 +655,7 @@
       font-size: var(--ipad-air-main-header);
       text-align:  right;
       width:30%;
-      top:40%;
+      top:48%;
       left:1.5%;
       rotate:-5.5deg;
       // font-family: "Rubik", sans-serif;
@@ -775,7 +775,7 @@
   
   
       position: absolute;
-      gap:5rem;
+      gap:3rem;
   
             left:48%;
             top: 5.5%;
@@ -1012,7 +1012,7 @@
             font-size: var(--mobile-main-header);
             text-align:  right;
             width:45%;
-            top:65%;
+            top:67%;
             left:1.2%;
             rotate:-5.5deg;
             // font-family: "Rubik", sans-serif;
@@ -1141,7 +1141,7 @@
             gap:0.1rem;
             
             left: 10%;
-            top: 60%;
+            top: 47.8%;
             
             
             
@@ -1158,9 +1158,9 @@
               
               
               margin:0;  
-              max-width:100%;
+              width:100%;
               max-height:20%;
-              padding:1.5rem;
+              padding: 2.8rem;
               // padding-right: 3.5rem;
               // padding-top: 1rem;
               // padding-bottom: 3.5rem;
@@ -1177,7 +1177,8 @@
               font-weight: 400;
               background: rgba(51, 102, 102, 0.897);
               
-              border-radius: 5.5rem;
+              border-radius: 0rem
+
             }
             
             
@@ -1223,7 +1224,7 @@
               
               background: rgba(51, 102, 102, 0.897);
               
-              border-radius: 3.5rem;
+              border-radius: 0.6rem;
             }
             
             
@@ -1252,7 +1253,7 @@
         .issue-img{
           max-width:100%;
           max-height:100%;
-          border-radius: 4rem;
+          border-radius: 0rem;
           object-fit: contain;
           // padding-bottom: 2rem;
         }
