--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -1141,7 +1141,7 @@
             gap:0.1rem;
             
             left: 10%;
-            top: 48%;
+            top: 58%;
             
             
             
@@ -1175,7 +1175,7 @@
               
               color:white;
               font-weight: 400;
-              background: rgba(51, 102, 102, 0.897);
+              background: var(--primary-green);
               
               border-radius: 0rem
 
@@ -1222,7 +1222,7 @@
               
               color:white;
               
-              background: rgba(51, 102, 102, 0.897);
+              background: var(--primary-green);
               
               border-radius: 0.6rem;
             }
