About.jsx cmp init

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -35,6 +35,7 @@
 @import './cmps/Hero.scss';
 @import './cmps/IssueStart.scss';
 @import './cmps/Issue.scss';
+@import './cmps/About.scss';
 
 
 /*mq*/
