--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -23,7 +23,7 @@ body {
 }
 
 .app-main-layout {
-  height: 370vh;
+  height: fit-content;
   width: 100vw;
   background-color: rgb(253, 227, 217);
   display: flex;
@@ -32,19 +32,22 @@ body {
 }
 
 .logo-nav{
-  position:fixed;
-  // display: none;
+  position: fixed;
   visibility: hidden;
-
-  height:4rem;
-  width:8rem;
-  top:80%;
-  left:93%;
-
+  height: 4rem;
+  width: 8rem;
+  top: 80%;
+  left: 93%;
   cursor: pointer;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.3s;
 
+  &.show {
+    visibility: visible;
+    opacity: 1;
+  }
 
-  &.logo-nav:hover{
+  &:hover{
     transform: scale(1.1);
     transition: 0.5s;
 
