--- a/src/assets/styles/cmps/About.scss
+++ b/src/assets/styles/cmps/About.scss
@@ -1,10 +1,75 @@
-.about-section{
+#about-section{
   display: flex;
-  flex-direction: row;
-  gap: 10rem;
-  justify-content: center;
-  
+width:100%;
+justify-content: center;
 
-  width:100vw;
-  color:red;
+
+margin-top: 8rem;
+
+animation:appear linear;
+animation-timeline:view();
+animation-range:entry 0% cover 40%;
+
+
+
+
+  .about-section-container{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    
+  
+    width:90vw;
+    height:fit-content;
+    color:white;
+
+
+    .about-section-img-container{
+      width: 62.7%;
+      height: fit-content;
+
+      
+      .about-section-img{
+        max-width: 100%;
+        height: 100%;
+        object-fit: contain;
+
+        border-top-right-radius: 6.25rem;
+        border-bottom-right-radius: 6.25rem;
+      }
+    }
+    
+    
+    .about-section-text{
+      width:100%;
+      height:fit-content;
+      background-color: var(--secondary-brown);
+
+
+      // font-size:var(--pc-regular-letter);
+
+      padding: 1.5rem;
+      border-top-left-radius: 6.25rem;
+      border-bottom-left-radius: 6.25rem;
+
+
+      .about-section-text-header{
+        font-size: var(--ipad-pro-sub-big-header);
+        font-weight: 700;
+        margin-bottom: 2rem;
+        direction: rtl;
+        color:var(--primary-green);
+      }
+
+      .about-section-text-body{
+        font-size: var(--ipad-pro-regular-letter);
+        font-weight: 400;
+        line-height: 1.5rem;
+        direction: rtl;
+        color:var(white);
+      }
+    }
+  }
+
+
 }
