--- a/src/assets/styles/cmps/About.scss
+++ b/src/assets/styles/cmps/About.scss
@@ -5,6 +5,7 @@ justify-content: center;
 
 
 margin-top: 8rem;
+margin-bottom: 8rem;
 
 animation:appear linear;
 animation-timeline:view();
@@ -25,13 +26,13 @@ animation-range:entry 0% cover 40%;
 
 
     .about-section-img-container{
-      width: 62.7%;
-      height: fit-content;
+      width: 100vw;
+      height: 100vh;
 
       
       .about-section-img{
-        max-width: 100%;
-        height: 100%;
+        max-width: 100vw;
+        height: 100vh;
         object-fit: contain;
 
         border-top-right-radius: 6.25rem;
@@ -41,8 +42,8 @@ animation-range:entry 0% cover 40%;
     
     
     .about-section-text{
-      width:100%;
-      height:fit-content;
+      width:100vw;
+      height:93.76vh;
       background-color: var(--secondary-brown);
 
 
