--- a/src/assets/styles/cmps/Issue.scss
+++ b/src/assets/styles/cmps/Issue.scss
@@ -7,8 +7,8 @@
   align-items:left;
   
 
-  
 
+  margin-bottom: 8rem;
 
   width:80vw;
   height:fit-content;
@@ -22,20 +22,21 @@
 
   .issue-section-texts{
     display: flex;
+    position: absolute;
     flex-direction: column;
     align-items: center;
     // justify-content: space-between;
 
 
-    max-width: 100%;
-    max-height: 0.5rem;
+    width: 48vw;
+    height: 45vh;
 
 
-    position: absolute;
-    gap:6rem;
+    // position: absolute;
+    gap:5rem;
 
-          left:50%;
-      top:18%;
+          left:35rem;
+      top:1rem;
 
       
     
@@ -51,8 +52,8 @@
       
       
       margin:0;  
-      max-width:100%;
-      max-height:100%;
+      width:40vw;
+      height:48vh;
       padding:2.4rem;
       // padding-right: 3.5rem;
       // padding-top: 1rem;
@@ -100,15 +101,15 @@
       direction: rtl;
       
       
-      max-width:30rem;
-      max-height:100%;
+      width:32vw;
+      height:15vh;
       padding:1rem;
       // padding-top: 0.5rem;
       // padding-bottom: 0.1rem;
       
       
       
-      // left:15%;
+      left:12.5rem;
       // top:67%;
       
       
