Create Contact cmp frontend

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -36,6 +36,7 @@
 @import './cmps/IssueStart.scss';
 @import './cmps/Issue.scss';
 @import './cmps/About.scss';
+@import './cmps/Contact.scss'
 
 
 /*mq*/
